--- a/index.html
+++ b/index.html
@@ -205,11 +205,9 @@
  opacity: 1;
  transition: opacity 2s ease-out; /* MODIFICATION: Added for fade out */
  }
- /* MODIFICATION START: New class for message box fade-out */
  #instructionMessageBox.fading-out {
   opacity: 0;
  }
- /* MODIFICATION END */
  #instructionResetLink {
   display: block;
   margin-top: 0.75rem;
@@ -226,8 +224,8 @@
  }
  /* MODIFICATION START: Updated animation for start message */
  @keyframes startMessageFade {
-  0%, 25% { opacity: 1; } /* Stay solid for 1s of 4s total */
-  100% { opacity: 0; }   /* Fade out over the next 3s */
+  0%, 25% { opacity: 1; } /* 0s-1s: solid */
+  100% { opacity: 0; }   /* 1s-4s: fade out */
  }
  /* MODIFICATION END */
  #scanStartMessage {
@@ -245,7 +243,7 @@
   pointer-events: none;
  }
  #scanStartMessage.fading-out {
-  animation: startMessageFade 4s ease-out forwards; /* MODIFIED */
+  animation: startMessageFade 4s ease-out forwards; /* MODIFICATION */
  }
  .control-panel { display: none; } /* Hidden for now */
  .progress-display { display: flex; align-items: center; gap: 0; padding: 12px; overflow-x: auto; min-height: 52px; box-sizing: border-box;}
@@ -277,7 +275,7 @@
 <div id="instructionScreen" class="screen">
  <div id="top-bar-controls">
   <div class="close-btn" onclick="alert('Close button clicked. Functionality to be added later.')">&times;</div>
-  <div class="version-display">v 1.12</div>
+  <div class="version-display">v 1.13</div>
   <div id="soundToggle" class="sound-toggle">s</div>
  </div>
  <div class="content">
@@ -310,7 +308,7 @@
     <path id="arrow-shape" d="M0 12 L8 12 L8 5 L23 15 L8 25 L8 18 L0 18 Z" stroke="black" stroke-width="1.25" stroke-linejoin="round" />
    </svg>
     <svg id="completion-check" class="hidden" viewBox="0 0 24 24">
-        <path d="M2.9,13.3c-0.4-0.4-0.4-1,0-1.4s1-0.4,1.4,0l4,4L19.7,4.3c0.4-0.4,1-0.4,1.4,0s0.4,1,0,1.4L9.8,19.1 C9.6,19.3,9.3,19.4,9,19.4s-0.6-0.1-0.8-0.4L2.9,13.3z" fill="white"/>
+        <path d="M8.7,16.4 C8.5,16.6 8.2,16.7 8,16.7 C7.8,16.7 7.5,16.6 7.3,16.4 L2.3,11.4 C1.9,11 1.9,10.4 2.3,10 C2.7,9.6 3.3,9.6 3.7,10 L8,14.3 L20.3,2 C20.7,1.6 21.3,1.6 21.7,2 C22.1,2.4 22.1,3 21.7,3.4 L8.7,16.4 Z" fill="white"/>
     </svg>
   </div>
   <div id="scanLine" class="scan-line"></div>
@@ -527,14 +525,6 @@
  videoOverlay.className = '';
  scanState = 'scanning';
  
- scanStartMessage.textContent = "Slowly Begin Rotating";
- scanStartMessage.style.display = 'block';
- scanStartMessage.classList.add('fading-out');
- setTimeout(() => {
-  scanStartMessage.style.display = 'none';
-  scanStartMessage.classList.remove('fading-out');
- }, 4000); // MODIFICATION
-
  startHeading = currentHeading;
  targetHeadings = [];
  nextHeadingIndex = 0;
@@ -544,6 +534,15 @@
  smoothedAngularVelocity = 0;
 
  await captureFrame();
+
+ scanStartMessage.textContent = "Slowly Begin Rotating";
+ scanStartMessage.style.display = 'block';
+ scanStartMessage.classList.add('fading-out');
+ setTimeout(() => {
+  scanStartMessage.style.display = 'none';
+  scanStartMessage.classList.remove('fading-out');
+ }, 4000);
+
  scheduleNextBeep();
 
  for (let i = 0; i < TOTAL_FRAMES - 1; i++) {
@@ -652,13 +651,11 @@
   } else {
     arrowShape.style.fill = COLOR_GOOD;
     if (instructionMessageBox.style.display === 'block' && !messageHideTimeout) {
-     // MODIFICATION START: Logic for graceful fade-out of warning message
       instructionMessageBox.classList.add('fading-out');
       messageHideTimeout = setTimeout(() => {
         hideInstructionMessage();
         messageHideTimeout = null;
       }, 2000);
-     // MODIFICATION END
     }
   }
 
@@ -769,8 +766,9 @@
 
  // Popup and Reset Functions
  function showInstructionMessage(message, showReset = false) {
-  instructionMessageBox.classList.remove('fading-out'); // MODIFICATION
-  instructionMessageBox.style.opacity = 1; // MODIFICATION
+  clearTimeout(messageHideTimeout);
+  instructionMessageBox.classList.remove('fading-out');
+  instructionMessageBox.style.opacity = 1;
   instructionMessageText.textContent = message;
   instructionResetLink.classList.toggle('hidden', !showReset);
   instructionMessageBox.style.display = 'block';
@@ -778,8 +776,6 @@
 
  function hideInstructionMessage() {
   instructionMessageBox.style.display = 'none';
-  instructionMessageBox.classList.remove('fading-out'); // MODIFICATION
-  instructionMessageBox.style.opacity = 1; // MODIFICATION
  }
 
  function resetAppToInstructions() {
