--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   height: 28px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, calc(-50% + 10px));
+  transform: translate(-50%, calc(-50% + 12px)); /* MODIFIED */
   z-index: 1;
  }
  .scan-line {
@@ -222,12 +222,10 @@
  transform: translate(-50%, -50%); font-size: 20rem; font-weight: 700;
  color: white; text-shadow: 2px 2px 8px rgba(0,0,0,0.6); z-index: 25;
  }
- /* MODIFICATION START: Updated animation for start message */
  @keyframes startMessageFade {
-  0%, 25% { opacity: 1; } /* 0s-1s: solid */
-  100% { opacity: 0; }   /* 1s-4s: fade out */
+  0%, 25% { opacity: 1; }
+  100% { opacity: 0; }
  }
- /* MODIFICATION END */
  #scanStartMessage {
   display: none;
   position: absolute;
@@ -243,7 +241,7 @@
   pointer-events: none;
  }
  #scanStartMessage.fading-out {
-  animation: startMessageFade 4s ease-out forwards; /* MODIFICATION */
+  animation: startMessageFade 4s ease-out forwards;
  }
  .control-panel { display: none; } /* Hidden for now */
  .progress-display { display: flex; align-items: center; gap: 0; padding: 12px; overflow-x: auto; min-height: 52px; box-sizing: border-box;}
