--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
  .scan-mask-area {
  position: absolute;
- background-color: rgba(0,0,0,0.4);
+ background-color: rgba(0,0,0,0.8);
  z-index: 6;
  pointer-events: none;
  }
@@ -172,9 +172,14 @@
  .mask-right { top: 2%; bottom: 2%; right: 0; width: 5%; }
  .scan-overlay {
  position: absolute; top: 2%; left: 5%; right: 5%; bottom: 2%;
- border: 3px dashed rgba(255, 255, 255, 0.7); border-radius: 10px;
+ border: 3px dashed transparent;
+ border-radius: 10px;
  z-index: 7;
  pointer-events: none;
+ transition: border-color 0.3s ease;
+ }
+ .scan-overlay.scanning-active {
+ border-color: rgba(255, 255, 255, 0.7);
  }
  .crop-mark {
  position: absolute;
@@ -312,7 +317,7 @@
 <div id="instructionScreen" class="screen">
  <div id="top-bar-controls">
  <div class="close-btn" onclick="alert('Close button clicked. Functionality to be added later.')">&times;</div>
- <div class="version-display">v 1.17</div>
+ <div class="version-display">v 1.18</div>
  <div id="soundToggle" class="sound-toggle">s</div>
  </div>
  <div class="content">
@@ -390,6 +395,7 @@
  const cameraViewContainer = document.getElementById('camera-view-container');
  const videoElement = document.getElementById('video-feed');
  const videoOverlay = document.getElementById('video-overlay');
+ const scanOverlay = document.querySelector('.scan-overlay');
  const scanArrowContainer = document.getElementById('scanArrowContainer');
  const arrowShape = document.getElementById('arrow-shape');
  const completionCheck = document.getElementById('completion-check');
@@ -570,6 +576,7 @@
  async function beginCaptureProcess(firstFrameCaptured = false) {
  videoOverlay.className = '';
  scanState = 'scanning';
+ scanOverlay.classList.add('scanning-active');
  
  startHeading = currentHeading;
  targetHeadings = [];
@@ -845,6 +852,7 @@
  startHeading = 0;
  isCountdownActive = false;
  smoothedAngularVelocity = 0;
+ scanOverlay.classList.remove('scanning-active');
   
  progressDisplay.innerHTML = '';
  hideInstructionMessage();
