--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
  .scan-mask-area {
  position: absolute;
- background-color: rgba(0,0,0,0.8);
+ background-color: rgba(0,0,0,0.6);
  z-index: 6;
  pointer-events: none;
  }
@@ -172,14 +172,16 @@
  .mask-right { top: 2%; bottom: 2%; right: 0; width: 5%; }
  .scan-overlay {
  position: absolute; top: 2%; left: 5%; right: 5%; bottom: 2%;
- border: 3px dashed transparent;
+ border: 1px solid transparent;
  border-radius: 10px;
  z-index: 7;
  pointer-events: none;
- transition: border-color 0.3s ease;
  }
  .scan-overlay.scanning-active {
- border-color: rgba(255, 255, 255, 0.7);
+ border-style: solid;
+ border-image-slice: 1;
+ border-image-repeat: round;
+ border-image-source: url("data:image/svg+xml,%3csvg width='24' height='1' xmlns='http://www.w3.org/2000/svg'%3e%3cline x1='0' y1='0' x2='24' y2='0' stroke='white' stroke-opacity='0.7' stroke-width='1' stroke-dasharray='12, 12'/%3e%3c/svg%3e");
  }
  .crop-mark {
  position: absolute;
@@ -189,20 +191,20 @@
  border-color: white;
  }
  .crop-mark.top-left {
- top: -3px; left: -3px;
- border-width: 3px 0 0 3px;
+ top: -1px; left: -1px;
+ border-width: 1px 0 0 1px;
  }
  .crop-mark.top-right {
- top: -3px; right: -3px;
- border-width: 3px 3px 0 0;
+ top: -1px; right: -1px;
+ border-width: 1px 1px 0 0;
  }
  .crop-mark.bottom-left {
- bottom: -3px; left: -3px;
- border-width: 0 0 3px 3px;
+ bottom: -1px; left: -1px;
+ border-width: 0 0 1px 1px;
  }
  .crop-mark.bottom-right {
- bottom: -3px; right: -3px;
- border-width: 0 3px 3px 0;
+ bottom: -1px; right: -1px;
+ border-width: 0 1px 1px 0;
  }
  .scan-arrow {
  position: absolute; left: 10px;
@@ -317,7 +319,7 @@
 <div id="instructionScreen" class="screen">
  <div id="top-bar-controls">
  <div class="close-btn" onclick="alert('Close button clicked. Functionality to be added later.')">&times;</div>
- <div class="version-display">v 1.18</div>
+ <div class="version-display">v 1.19</div>
  <div id="soundToggle" class="sound-toggle">s</div>
  </div>
  <div class="content">
