--- a/index.html
+++ b/index.html
@@ -178,10 +178,14 @@
  pointer-events: none;
  }
  .scan-overlay.scanning-active {
- border-style: solid;
- border-image-slice: 2;
- border-image-repeat: round;
- border-image-source: url("data:image/svg+xml,%3csvg width='20' height='2' xmlns='http://www.w3.org/2000/svg'%3e%3cline x1='0' y1='1' x2='20' y2='1' stroke='white' stroke-opacity='0.7' stroke-width='2' stroke-dasharray='12, 8'/%3e%3c/svg%3e");
+ background-image:
+  linear-gradient(to right, rgba(255,255,255,0.7) 60%, transparent 60%),
+  linear-gradient(to right, rgba(255,255,255,0.7) 60%, transparent 60%),
+  linear-gradient(to bottom, rgba(255,255,255,0.7) 60%, transparent 60%),
+  linear-gradient(to bottom, rgba(255,255,255,0.7) 60%, transparent 60%);
+ background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+ background-size: 20px 2px, 20px 2px, 2px 20px, 2px 20px;
+ background-position: top left, bottom left, top left, top right;
  }
  .crop-mark {
  position: absolute;
@@ -319,7 +323,7 @@
 <div id="instructionScreen" class="screen">
  <div id="top-bar-controls">
  <div class="close-btn" onclick="alert('Close button clicked. Functionality to be added later.')">&times;</div>
- <div class="version-display">v 1.20</div>
+ <div class="version-display">v 1.21</div>
  <div id="soundToggle" class="sound-toggle">s</div>
  </div>
  <div class="content">
